# cobol-modernization

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml
.claude/: claude.md
agents/: pyproject.toml
agents/cobol_structural/: README.md  merge.py  prompts.py  task.py
agents/codegen/: eligibility.py  task.py
agents/common/: README.md  confidence.py  guardrails_client.py  kill_switch.py  langfuse_client.py  llm_client.py  mcp_client.py  skill_loader.py
agents/epic_story_writer/: README.md  clustering.py  task.py
agents/ingestion_chunking/: README.md  chunker.py  secret_scan.py  task.py
agents/issue_tracker_export/: README.md  adapter.py
agents/jcl_structural/: README.md  task.py
agents/mainframe_ingestion/: README.md  adapter.py
agents/qa_drilldown/: README.md
agents/recommendation/: README.md  decision_factors.py  task.py
agents/skills/cobol-code-understanding/: SKILL.md
agents/skills/cobol-structural-analysis/: SKILL.md
agents/skills/codegen-java-spring-boot/: SKILL.md
agents/skills/codegen-python/: SKILL.md
agents/skills/epic-story-writer/: SKILL.md
agents/skills/ingestion-chunking/: SKILL.md
agents/skills/jcl-structural-analysis/: SKILL.md
agents/skills/mainframe-ingestion/: SKILL.md
agents/skills/migration-recommendation/: SKILL.md
agents/skills/qa-drilldown/: SKILL.md
agents/tests/: README.md  conftest.py  test_chunker.py  test_cobol_structural_task.py  test_codegen_task.py  test_confidence.py  test_epic_story_clustering.py  test_epic_story_writer_task.py  test_guardrails_client.py  test_issue_tracker_adapter.py  test_kill_switch_record_kill.py  test_langfuse_client.py  test_llm_client.py  test_mainframe_adapter.py  test_mcp_client.py  test_merge.py  test_recommendation_task.py  test_secret_scan.py
agents/tools/: audit_tool.md  couchdb_tools.md  issue_tracker_export_tool.md  kill_tool.md  mainframe_tools.md
backend/codegen_bff/: Dockerfile  pyproject.toml
backend/codegen_bff/app/: config.py  main.py
backend/codegen_bff/app/routes/: codegen.py
backend/codegen_bff/tests/: test_codegen_routes.py  test_cors.py
backend/editor_admin_bff/: Dockerfile  pyproject.toml
backend/editor_admin_bff/app/: config.py  main.py
backend/editor_admin_bff/app/routes/: editor_items.py
backend/editor_admin_bff/tests/: test_cors.py  test_editor_proxy.py
backend/epic_story_service/: Dockerfile  pyproject.toml
backend/epic_story_service/app/: config.py  main.py
backend/epic_story_service/app/routes/: epics.py  export.py  stories.py
backend/epic_story_service/tests/: test_epic_story_routes.py
backend/ingestion_bff/: Dockerfile  README.md  pyproject.toml
backend/ingestion_bff/app/: config.py  main.py
backend/ingestion_bff/app/routes/: status.py  upload.py
backend/ingestion_bff/tests/: test_cors.py  test_upload_fanout.py
backend/job_pipeline_control_service/: Dockerfile  README.md  pyproject.toml
backend/job_pipeline_control_service/app/: config.py  main.py  redis_client.py
backend/job_pipeline_control_service/app/routes/: admin.py  jobs.py
backend/job_pipeline_control_service/tests/: test_admin_kill.py  test_jobs_routes.py
backend/recommendation_service/: Dockerfile  README.md  pyproject.toml
backend/recommendation_service/app/: config.py  main.py
backend/recommendation_service/app/routes/: recommendations.py
backend/recommendation_service/tests/: test_recommendation_routes.py
backend/review_bff/: Dockerfile  README.md  pyproject.toml
backend/review_bff/app/: cache.py  config.py  main.py
backend/review_bff/app/routes/: review_items.py
backend/review_bff/tests/: test_cors.py  test_review_detail_routes.py  test_review_fanout.py
backend/shared/: README.md  mcp_client.py  pyproject.toml
backend/shared/models/: __init__.py  audit.py  backlog.py  envelope.py  job_run.py  parsed_structure.py  recommendation.py  source.py
backend/shared/tests/: test_model_validation.py
backend/source_mgmt_service/: Dockerfile  README.md  pyproject.toml
backend/source_mgmt_service/app/: config.py  main.py
backend/source_mgmt_service/app/routes/: mainframe_pulls.py  source_files.py  uploads.py
backend/source_mgmt_service/tests/: test_source_files_routes.py  test_upload_routes.py
docs/: AGENTS.md  architecture.md  deferred_scope.md
fixtures/sample_cobol/: PAYROLL01.CBL  TIMESHEET.CBL
frontend/admin-mfe/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/admin-mfe/src/: AdminApp.tsx  main.tsx
frontend/codegen-mfe/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/codegen-mfe/src/: CodegenApp.tsx  (+1 more)
frontend/design-system/: README.md  package-lock.json  package.json
frontend/editor-mfe/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/review-mfe/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/shared-deps/: package.json
frontend/shell/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/upload-mfe/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
infra/couchdb/: init_databases.py  seed_dev_data.py  validate_doc_update_audit_log.js
infra/litellm/: litellm_config.yaml
infra/mock_llm/: Dockerfile  pyproject.toml  server.py
infra/redis/: README.md
mcp_gateway/: Dockerfile  README.md  pyproject.toml
mcp_gateway/app/: config.py  couchdb_client.py  hashing.py  main.py  schemas.py
mcp_gateway/app/tools/: audit_tools.py  codegen_tools.py  couchdb_tools.py  export_tools.py  kill_tools.py  mainframe_tools.py
mcp_gateway/tests/: conftest.py  test_audit_hash_chain.py  test_codegen_tools.py  test_couchdb_tools.py  test_export_tools.py  test_kill_tools.py  test_mainframe_tools.py
orchestrator/: Dockerfile  README.md  celery_app.py  checkpoint.py  pipeline.py  pyproject.toml
orchestrator/tests/: test_celery_app_thread_safety.py  test_checkpoint.py  test_pipeline_wiring.py
scripts/: seed_epics_stories.py
(+56 files in other folders)
