[project]
name = "harness-agents"
version = "0.1.0"
description = "Celery task implementations for the ingestion, structural analysis, recommendation, and mainframe-connector agents, plus shared agent-side clients (MCP, guardrails, langfuse, kill-switch, LLM, skill loader, confidence scoring)."
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.4",
    "fastmcp>=3.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "redis>=5.0",
    "harness-shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv.sources]
harness-shared = { path = "../backend/shared", editable = true }
