[project]
name = "mcp-gateway"
version = "0.1.0"
description = "FastMCP-based gateway: the sole path from agent code to CouchDB, audit log, kill-switch, and the mainframe connector."
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.2",
    "ibmcloudant>=0.9",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "redis>=5.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
