[project]
name = "recommendation-service"
version = "0.1.0"
description = "Thin read/decision API over migration_recommendation documents, backing the Review BFF."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "fastmcp>=3.0",
    "harness-shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv.sources]
harness-shared = { path = "../shared", editable = true }
