[project]
name = "harness-shared"
version = "0.1.0"
description = "Shared Pydantic document models (envelope, source, parsed_structure, recommendation, backlog, job_run, audit) and the MCP client wrapper, used by both agents/ and the FastAPI services."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "fastmcp>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
